--- a/config/factorytech.cfg
+++ b/config/factorytech.cfg
@@ -9,6 +9,9 @@
 client {
     # Set to false to disable machine animations; this will make the mod uglier but may increase your framerate [default: true]
     B:doTESRs=true
+
+    # Set to false to disable extra information in machine tooltips. [default: true]
+    B:showTooltips=true
 }
 
 
