--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -9,7 +9,6 @@ general {
     ##########################################################################################################
 
     client {
-        # Enables the Clear Chat keybind.
         B:clearChatKeybind=true
 
         # Removes underwater fog.
@@ -26,29 +25,23 @@ general {
 
         # Disables the Wither spawn sound.
         B:disableWitherSpawnSound=false
-
-        # Whether FoV changes are enabled by default.
         B:fovChangesEnabledByDefault=true
-
-        # Whether a status message should be displayed when FoV changes are toggled.
         B:fovChangesStatusMessage=true
 
         # Moves the Bucket to the Tools creative tab.
         B:moveBucketCreativeTab=true
-
-        # Enables the Noclip keybind, which toggles between /gamemode c and /gamemode sp.
         B:noclipKeybind=true
-
-        # Enables the Reload Sound System keybind.
         B:reloadSoundSystemKeybind=true
-
-        # Whether the shortened versions of the gamemode commands (/gms, /gmc, /gma and /gmsp) should be replaced by the longer ones before being sent. This does not work in 1.10.
         B:shortGamemodeCommands=true
 
-        # Moves the spawn eggs to their own creative tab.
+        # Moves spawn eggs to their own creative tab.
         B:spawnEggsCreativeTab=true
 
-        # Enables a keybind to disable FoV changes.
+        # Whether to enable stepup auto jump.
+        B:stepup=false
+
+        # Whether stepup auto jump is enabled by default.
+        B:stepupEnabledByDefault=false
         B:toggleFoVChangesKeybind=false
     }
 
@@ -61,6 +54,9 @@ general {
     commands {
         # Enables the /deletegamerule command.
         B:deletegamerule=true
+
+        # Enables the client-sided /disconnect command, which leaves the current world.
+        B:disconnect=true
 
         # Allows /give to accept integer IDs, amounts higher than 64, and ore dictionary names prefixed by "ore:".
         B:giveTweaks=true
@@ -76,6 +72,9 @@ general {
 
         # Enables the /rtreloadclient command, which is the client-sided version of /rtreload.
         B:rtreloadclient=true
+
+        # Whether the shortened versions of the gamemode commands (/gms, /gmc, /gma and /gmsp) should be replaced by the longer ones before being sent. This is client-sided and does not support tab completion. This does not work in 1.10.
+        B:shortGamemodeCommands=false
     }
 
     ##########################################################################################################
@@ -85,7 +84,6 @@ general {
     ##########################################################################################################
 
     ding {
-        # Disables this feature if iChun's Ding is installed.
         B:disableIfDingIsInstalled=true
         S:soundName=entity.experience_orb.pickup
 
@@ -98,9 +96,12 @@ general {
         # Min: 0.0
         # Max: 10.0
         D:soundPitch=1.0
+        S:worldSoundName=entity.experience_orb.pickup
 
         # The name of the sound to play when a world loads.Leave this empty to disable it.
-        S:worldSoundName=entity.experience_orb.pickup
+        S:worldSoundNames <
+            entity.experience_orb.pickup
+         >
 
         # The pitch of the sound to play when a world starts.
         # Min: 0.0
@@ -119,10 +120,6 @@ general {
         # Min: 0.0
         # Max: 1024.0
         D:attackSpeed=4.0
-
-        # The interval between every check for unused dimensions in ticks. Set this to 0 to disable the check.
-        # Min: 0
-        # Max: 2147483647
         I:dimensionUnloadCheckInterval=600
 
         # Disables the cumulative anvil cost.
@@ -381,6 +378,32 @@ general {
         # Min: 0.0
         # Max: 1.0
         D:normalChance=1.0
+    }
+
+    ##########################################################################################################
+    # keybinds
+    #--------------------------------------------------------------------------------------------------------#
+    # Keybinds
+    ##########################################################################################################
+
+    keybinds {
+        # Enables the Clear Chat keybind.
+        B:clearChat=true
+
+        # Whether FoV changes are enabled by default.
+        B:fovChangesEnabledByDefault=true
+
+        # Whether a status message should be displayed when FoV changes are toggled.
+        B:fovChangesStatusMessage=true
+
+        # Enables the Noclip keybind, which toggles between /gamemode c and /gamemode sp.
+        B:noclip=true
+
+        # Enables the Reload Sound System keybind.
+        B:reloadSoundSystem=true
+
+        # Enables a keybind to disable FoV changes.
+        B:toggleFoVChanges=true
     }
 
 }
