--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -86,8 +86,11 @@ worldgen {
     # Should BuildCraft generate anything in the world?
     B:enable=true
 
-    # Should any oil sprouts or lakes generate, at all?
+    # Should any oil sprouts or lakes be generated at all?
     B:enableOilGen=true
+
+    # Whether oil spouts are generated or not. The oil spring at the bottom of large lakes will still exist.
+    B:enableOilSpouts=true
 
     # Biome registry names (e.g. 'minecraft:ocean','minecraft:plains') of biomes that should have GREATLY increased oil generation rates.
     S:excessiveBiomes <
@@ -201,6 +204,9 @@ worldgen {
 
     # Should BuildCraft generate water springs?
     B:generateWaterSprings=true
+
+    # The rate of occurrence of oil wells.
+    D:oilWellGenerationRate=1.0
 
     # Biome registry names (e.g. 'minecraft:ocean','minecraft:hills') of biomes that should have slightly increased oil generation rates.
     S:surfaceDepositBiomes <
