Disabled ore block mystcraft pages

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -3,19 +3,19 @@
 symbol {
 
     minecraft {
-        B:modmat_coal_ore_0.enabled=true
-        B:modmat_diamond_ore_0.enabled=true
+        B:modmat_coal_ore_0.enabled=false
+        B:modmat_diamond_ore_0.enabled=false
         B:modmat_dirt_0.enabled=true
-        B:modmat_emerald_ore_0.enabled=true
+        B:modmat_emerald_ore_0.enabled=false
         B:modmat_end_stone_0.enabled=true
         B:modmat_flowing_lava_0.enabled=true
         B:modmat_flowing_water_0.enabled=true
         B:modmat_glass_0.enabled=true
         B:modmat_glowstone_0.enabled=true
-        B:modmat_gold_ore_0.enabled=true
+        B:modmat_gold_ore_0.enabled=false
         B:modmat_ice_0.enabled=true
-        B:modmat_iron_ore_0.enabled=true
-        B:modmat_lapis_ore_0.enabled=true
+        B:modmat_iron_ore_0.enabled=false
+        B:modmat_lapis_ore_0.enabled=false
         B:modmat_log2_0.enabled=true
         B:modmat_log2_1.enabled=true
         B:modmat_log_0.enabled=true
@@ -26,8 +26,8 @@ symbol {
         B:modmat_netherrack_0.enabled=true
         B:modmat_obsidian_0.enabled=true
         B:modmat_packed_ice_0.enabled=true
-        B:modmat_quartz_ore_0.enabled=true
-        B:modmat_redstone_ore_0.enabled=true
+        B:modmat_quartz_ore_0.enabled=false
+        B:modmat_redstone_ore_0.enabled=false
         B:modmat_sandstone_0.enabled=true
         B:modmat_snow_0.enabled=true
         B:modmat_stone_0.enabled=true
