--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -61,8 +61,17 @@ materials {
     # Set to false to prevent Nickel from being loaded [default: true]
     B:"Enable material nickel"=true
 
+    # Set to false to prevent Peridot from being loaded [default: true]
+    B:"Enable material peridot"=true
+
     # Set to false to prevent Platinum from being loaded [default: true]
     B:"Enable material platinum_plustic"=true
+
+    # Set to false to prevent Ruby from being loaded [default: true]
+    B:"Enable material ruby"=true
+
+    # Set to false to prevent Sapphire from being loaded [default: true]
+    B:"Enable material sapphire"=true
 
     # Set to false to prevent Signalum from being loaded [default: true]
     B:"Enable material signalum_plustic"=true
@@ -139,8 +148,6 @@ modules {
 
     # Integrate with Psi [default: true]
     B:"Enable Psi support"=true
-
-    # Integrate with Substratum [default: true]
     B:"Enable Substratum support"=true
 
     # Integrate with Survivalist [default: true]
