Added a bunch of mods

--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -21,6 +21,7 @@ compat {
     B:"jei:storage.barrels"=true
     B:"mcjtylib:tablet"=true
     B:"mcmultipart:simplelogic.gates"=true
+    B:"opencomputers:audio.storage"=true
     B:"opencomputers:lib"=true
     B:"storage.barrels:tweak.carry"=true
 }
@@ -34,6 +35,12 @@ compat {
 ##########################################################################################################
 
 overrides {
+    # Audio storage, recording and playback - Quartz Discs [Profile: FORCED]
+    S:audio.storage=DEFAULT
+
+    # Audio cables [Profile: FORCED]
+    S:audio.transport=DEFAULT
+
     # Improved Cauldron! [Profile: FORCED]
     S:crafting.cauldron=DEFAULT
 
