disabled Nuclear Furnace
It's just fast funace that uses uranium

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -706,7 +706,7 @@ ores {
 other {
     # Register processors to the game? Order: Nuclear Furnace, Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor, Centrifuge, Rock Crusher.
     B:register_processor <
-        true
+        false
         true
         true
         true
@@ -1015,5 +1015,3 @@ tools {
         20
      >
 }
-
-
