Updated mod configs

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -196,6 +196,7 @@ symbol {
         B:modgradient.enabled=true
         B:modhalf.enabled=true
         B:modmat_blockcrystal_0.enabled=true
+        B:modmat_fluidblockblackink_0.enabled=true
         B:modnoon.enabled=true
         B:modnorth.enabled=true
         B:modrising.enabled=true
@@ -619,6 +620,7 @@ symbol {
         B:modmat_fluid_hydrogen_0.enabled=false
         B:modmat_fluid_iron_nak_0.enabled=false
         B:modmat_fluid_iron_nak_hot_0.enabled=false
+        B:modmat_fluid_koh_0.enabled=true
         B:modmat_fluid_lapis_0.enabled=false
         B:modmat_fluid_lapis_nak_0.enabled=false
         B:modmat_fluid_lapis_nak_hot_0.enabled=false
@@ -634,6 +636,7 @@ symbol {
         B:modmat_fluid_magnesium_nak_hot_0.enabled=false
         B:modmat_fluid_nak_0.enabled=false
         B:modmat_fluid_nak_hot_0.enabled=false
+        B:modmat_fluid_naoh_0.enabled=true
         B:modmat_fluid_neptunium_236_0.enabled=false
         B:modmat_fluid_neptunium_236_fluoride_0.enabled=false
         B:modmat_fluid_neptunium_236_fluoride_flibe_0.enabled=false
@@ -661,6 +664,8 @@ symbol {
         B:modmat_fluid_plutonium_fluoride_0.enabled=false
         B:modmat_fluid_plutonium_fluoride_flibe_0.enabled=false
         B:modmat_fluid_potassium_0.enabled=false
+        B:modmat_fluid_potassium_fluoride_solution_0.enabled=true
+        B:modmat_fluid_potassium_hydroxide_solution_0.enabled=true
         B:modmat_fluid_quartz_0.enabled=false
         B:modmat_fluid_quartz_nak_0.enabled=false
         B:modmat_fluid_quartz_nak_hot_0.enabled=false
@@ -668,6 +673,8 @@ symbol {
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
         B:modmat_fluid_sodium_0.enabled=false
+        B:modmat_fluid_sodium_fluoride_solution_0.enabled=true
+        B:modmat_fluid_sodium_hydroxide_solution_0.enabled=true
         B:modmat_fluid_sulfur_0.enabled=false
         B:modmat_fluid_sulfur_dioxide_0.enabled=false
         B:modmat_fluid_sulfur_trioxide_0.enabled=false
@@ -727,6 +734,138 @@ symbol {
         B:modmat_ironberry_juice_0.enabled=true
         B:modmat_olive_oil_0.enabled=true
         B:modmat_wildberry_juice_0.enabled=true
+    }
+
+    tconstruct {
+        B:modmat_blood_0.enabled=true
+        B:modmat_blueslime_0.enabled=true
+        B:modmat_molten_alubrass_0.enabled=true
+        B:modmat_molten_aluminum_0.enabled=true
+        B:modmat_molten_ardite_0.enabled=true
+        B:modmat_molten_brass_0.enabled=true
+        B:modmat_molten_bronze_0.enabled=true
+        B:modmat_molten_clay_0.enabled=true
+        B:modmat_molten_cobalt_0.enabled=true
+        B:modmat_molten_copper_0.enabled=true
+        B:modmat_molten_dirt_0.enabled=true
+        B:modmat_molten_electrum_0.enabled=true
+        B:modmat_molten_enderium_0.enabled=true
+        B:modmat_molten_gold_0.enabled=true
+        B:modmat_molten_invar_0.enabled=true
+        B:modmat_molten_iridium_0.enabled=true
+        B:modmat_molten_iron_0.enabled=true
+        B:modmat_molten_knightslime_0.enabled=true
+        B:modmat_molten_lead_0.enabled=true
+        B:modmat_molten_lumium_0.enabled=true
+        B:modmat_molten_manyullyn_0.enabled=true
+        B:modmat_molten_nickel_0.enabled=true
+        B:modmat_molten_obsidian_0.enabled=true
+        B:modmat_molten_pigiron_0.enabled=true
+        B:modmat_molten_platinum_0.enabled=true
+        B:modmat_molten_signalum_0.enabled=true
+        B:modmat_molten_silver_0.enabled=true
+        B:modmat_molten_steel_0.enabled=true
+        B:modmat_molten_stone_0.enabled=true
+        B:modmat_molten_tin_0.enabled=true
+        B:modmat_molten_zinc_0.enabled=true
+        B:modmat_purpleslime_0.enabled=true
+    }
+
+    charcoal_pit {
+        B:modmat_block_fluid_creosote_0.enabled=true
+    }
+
+    immersivetech {
+        B:modmat_fluiddistwater_0.enabled=true
+        B:modmat_fluidsteam_0.enabled=true
+    }
+
+    buildcraftenergy {
+        B:modmat_fluid_block_fuel_dense_heat_0_0.enabled=true
+        B:modmat_fluid_block_fuel_dense_heat_1_0.enabled=true
+        B:modmat_fluid_block_fuel_dense_heat_2_0.enabled=true
+        B:modmat_fluid_block_fuel_gaseous_heat_0_0.enabled=true
+        B:modmat_fluid_block_fuel_gaseous_heat_1_0.enabled=true
+        B:modmat_fluid_block_fuel_gaseous_heat_2_0.enabled=true
+        B:modmat_fluid_block_fuel_light_heat_0_0.enabled=true
+        B:modmat_fluid_block_fuel_light_heat_1_0.enabled=true
+        B:modmat_fluid_block_fuel_light_heat_2_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_0_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_1_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_2_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_light_heat_0_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_light_heat_1_0.enabled=true
+        B:modmat_fluid_block_fuel_mixed_light_heat_2_0.enabled=true
+        B:modmat_fluid_block_oil_dense_heat_0_0.enabled=true
+        B:modmat_fluid_block_oil_dense_heat_1_0.enabled=true
+        B:modmat_fluid_block_oil_dense_heat_2_0.enabled=true
+        B:modmat_fluid_block_oil_distilled_heat_0_0.enabled=true
+        B:modmat_fluid_block_oil_distilled_heat_1_0.enabled=true
+        B:modmat_fluid_block_oil_distilled_heat_2_0.enabled=true
+        B:modmat_fluid_block_oil_heat_0_0.enabled=true
+        B:modmat_fluid_block_oil_heat_1_0.enabled=true
+        B:modmat_fluid_block_oil_heat_2_0.enabled=true
+        B:modmat_fluid_block_oil_heavy_heat_0_0.enabled=true
+        B:modmat_fluid_block_oil_heavy_heat_1_0.enabled=true
+        B:modmat_fluid_block_oil_heavy_heat_2_0.enabled=true
+        B:modmat_fluid_block_oil_residue_heat_0_0.enabled=true
+        B:modmat_fluid_block_oil_residue_heat_1_0.enabled=true
+        B:modmat_fluid_block_oil_residue_heat_2_0.enabled=true
+    }
+
+    colored_water {
+        B:modmat_glowing_water_black_0.enabled=true
+        B:modmat_glowing_water_blue_0.enabled=true
+        B:modmat_glowing_water_brown_0.enabled=true
+        B:modmat_glowing_water_cyan_0.enabled=true
+        B:modmat_glowing_water_gray_0.enabled=true
+        B:modmat_glowing_water_green_0.enabled=true
+        B:modmat_glowing_water_light_blue_0.enabled=true
+        B:modmat_glowing_water_lime_0.enabled=true
+        B:modmat_glowing_water_magenta_0.enabled=true
+        B:modmat_glowing_water_orange_0.enabled=true
+        B:modmat_glowing_water_pink_0.enabled=true
+        B:modmat_glowing_water_purple_0.enabled=true
+        B:modmat_glowing_water_red_0.enabled=true
+        B:modmat_glowing_water_silver_0.enabled=true
+        B:modmat_glowing_water_white_0.enabled=true
+        B:modmat_glowing_water_yellow_0.enabled=true
+        B:modmat_water_black_0.enabled=true
+        B:modmat_water_blue_0.enabled=true
+        B:modmat_water_brown_0.enabled=true
+        B:modmat_water_cyan_0.enabled=true
+        B:modmat_water_gray_0.enabled=true
+        B:modmat_water_green_0.enabled=true
+        B:modmat_water_light_blue_0.enabled=true
+        B:modmat_water_lime_0.enabled=true
+        B:modmat_water_magenta_0.enabled=true
+        B:modmat_water_orange_0.enabled=true
+        B:modmat_water_pink_0.enabled=true
+        B:modmat_water_purple_0.enabled=true
+        B:modmat_water_red_0.enabled=true
+        B:modmat_water_silver_0.enabled=true
+        B:modmat_water_white_0.enabled=true
+        B:modmat_water_yellow_0.enabled=true
+    }
+
+    contenttweaker {
+        B:modmat_brine_0.enabled=true
+        B:modmat_crude_steel_0.enabled=true
+        B:modmat_irradiated_blood_0.enabled=true
+        B:modmat_monster_essence_0.enabled=true
+        B:modmat_un_precipitated_molten_gold_0.enabled=true
+        B:modmat_unrefined_molten_iron_0.enabled=true
+    }
+
+    factorytech {
+        B:modmat_h2so4_0.enabled=true
+    }
+
+    immersivepetroleum {
+        B:modmat_fluid_diesel_0.enabled=true
+        B:modmat_fluid_gasoline_0.enabled=true
+        B:modmat_fluid_lubricant_0.enabled=true
+        B:modmat_fluid_napalm_0.enabled=true
     }
 
 }
