Updated mod configs

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -410,6 +410,7 @@ binniecore {
 bithop {
     B:bithop=false
     B:fluxhop=false
+    B:pullhop=false
 }
 
 
@@ -818,6 +819,18 @@ botania {
 }
 
 
+botaniatweaks {
+    B:compressedtinypotato1=false
+    B:compressedtinypotato2=false
+    B:compressedtinypotato3=false
+    B:compressedtinypotato4=false
+    B:compressedtinypotato5=false
+    B:compressedtinypotato6=false
+    B:compressedtinypotato7=false
+    B:compressedtinypotato8=false
+}
+
+
 botany {
     B:ceramic=false
     B:ceramic.1=false
@@ -1198,6 +1211,13 @@ charcoalpit {
 charset {
     B:compressioncrafter=false
     B:railcharset=false
+    B:recordplayer=false
+}
+
+
+chickenchunks {
+    B:chunkloader=false
+    B:chunkloader.1=false
 }
 
 
@@ -1247,6 +1267,11 @@ compactmachines3 {
     B:tunnel=false
     B:wall=true
     B:wallbreakable=true
+}
+
+
+conarm {
+    B:armorstation=false
 }
 
 
@@ -1492,6 +1517,7 @@ dazzle {
 
 
 deepresonance {
+    B:advancedpedestal=false
     B:crystalizer=false
     B:debugblock=false
     B:denseglass=false
@@ -1528,6 +1554,15 @@ enderstorage {
 }
 
 
+engineersdoors {
+    B:fencegatealuminium=false
+    B:fencegatesteel=false
+    B:fencegatetreated=false
+    B:trapdoorsteel=false
+    B:trapdoortreated=false
+}
+
+
 extrabees {
     B:alveary=false
     B:alveary.1=false
@@ -1544,7 +1579,108 @@ extrabees {
 }
 
 
+extrabitmanipulation {
+    B:bodyparttemplate=true
+}
+
+
 extratrees {
+    B:binniebeerale=false
+    B:binniebeercorn=false
+    B:binniebeerlager=false
+    B:binniebeerrye=false
+    B:binniebeerstout=false
+    B:binniebeerwheat=false
+    B:binniebrandyapple=false
+    B:binniebrandyapricot=false
+    B:binniebrandycherry=false
+    B:binniebrandycitrus=false
+    B:binniebrandyelderberry=false
+    B:binniebrandyfruit=false
+    B:binniebrandygrape=false
+    B:binniebrandypear=false
+    B:binniebrandyplum=false
+    B:binnieciderapple=false
+    B:binnieciderpeach=false
+    B:binnieciderpear=false
+    B:binniefermentedpotatoes=false
+    B:binniejuice=false
+    B:binniejuiceapple=false
+    B:binniejuiceapricot=false
+    B:binniejuicebanana=false
+    B:binniejuicecarrot=false
+    B:binniejuicecherry=false
+    B:binniejuicecranberry=false
+    B:binniejuiceelderberry=false
+    B:binniejuicegrapefruit=false
+    B:binniejuicelemon=false
+    B:binniejuicelime=false
+    B:binniejuiceolive=false
+    B:binniejuiceorange=false
+    B:binniejuicepeach=false
+    B:binniejuicepear=false
+    B:binniejuicepineapple=false
+    B:binniejuiceplum=false
+    B:binniejuiceredgrape=false
+    B:binniejuicetomato=false
+    B:binniejuicewhitegrape=false
+    B:binnielatex=false
+    B:binnieliqueuralmond=false
+    B:binnieliqueuranise=false
+    B:binnieliqueurbanana=false
+    B:binnieliqueurblackberry=false
+    B:binnieliqueurblackcurrant=false
+    B:binnieliqueurcherry=false
+    B:binnieliqueurchocolate=false
+    B:binnieliqueurcinnamon=false
+    B:binnieliqueurcoffee=false
+    B:binnieliqueurhazelnut=false
+    B:binnieliqueurherbal=false
+    B:binnieliqueurlemon=false
+    B:binnieliqueurmelon=false
+    B:binnieliqueurmint=false
+    B:binnieliqueurorange=false
+    B:binnieliqueurpeach=false
+    B:binnieliqueurraspberry=false
+    B:binnieliquorapple=false
+    B:binnieliquorapricot=false
+    B:binnieliquorcherry=false
+    B:binnieliquorelderberry=false
+    B:binnieliquorfruit=false
+    B:binnieliquorpear=false
+    B:binniemashcorn=false
+    B:binniemashgrain=false
+    B:binniemashrye=false
+    B:binniemashwheat=false
+    B:binnieresin=false
+    B:binnierumdark=false
+    B:binnierumwhite=false
+    B:binniesap=false
+    B:binniespiritgin=false
+    B:binniespiritneutral=false
+    B:binniespiritsugarcane=false
+    B:binnietequila=false
+    B:binnieturpentine=false
+    B:binnievodka=false
+    B:binniewhiskey=false
+    B:binniewhiskeycorn=false
+    B:binniewhiskeyrye=false
+    B:binniewhiskeywheat=false
+    B:binniewineagave=false
+    B:binniewineapricot=false
+    B:binniewinebanana=false
+    B:binniewinecarrot=false
+    B:binniewinecherry=false
+    B:binniewinecitrus=false
+    B:binniewinecranberry=false
+    B:binniewineelderberry=false
+    B:binniewinefortified=false
+    B:binniewinepineapple=false
+    B:binniewineplum=false
+    B:binniewinered=false
+    B:binniewinesparkling=false
+    B:binniewinetomato=false
+    B:binniewinewhite=false
     B:doorsalder=false
     B:doorsapple=false
     B:doorsash=false
@@ -6720,6 +6856,11 @@ gendustry {
 
 genetics {
     B:advmachine=false
+    B:binniebacteria=false
+    B:binniebacteriapoly=false
+    B:binniebacteriavector=false
+    B:binniednaraw=false
+    B:binniegrowthmedium=false
     B:labmachine=false
     B:labmachine.1=false
     B:labmachine.2=false
@@ -6735,6 +6876,13 @@ genetics {
 hopperducts {
     B:gratedhopper=false
     B:hopperduct=false
+}
+
+
+horsepower {
+    B:grindstone=false
+    B:handgrindstone=false
+    B:press=false
 }
 
 
@@ -6951,6 +7099,7 @@ immersivepetroleum {
 
 immersivetech {
     B:connectors=false
+    B:metaldevice=false
     B:stonedecoration=true
 }
 
@@ -7208,6 +7357,7 @@ magneticraft {
     B:electricpoletransformer=false
     B:feedingtrough=false
     B:grinder=false
+    B:hydraulicpress=false
     B:infiniteenergy=false
     B:inserter=false
     B:ironpipe=false
@@ -8016,6 +8166,8 @@ nuclearcraft {
     B:blockice=false
     B:buffer=false
     B:cellblock=false
+    B:centrifugeactive=false
+    B:centrifugeidle=false
     B:chemicalreactoractive=false
     B:chemicalreactoridle=false
     B:cobblestonegenerator=false
@@ -8289,6 +8441,7 @@ nuclearcraft {
     B:fluidiron=false
     B:fluidironnak=false
     B:fluidironnakhot=false
+    B:fluidkoh=false
     B:fluidlapis=false
     B:fluidlapisnak=false
     B:fluidlapisnakhot=false
@@ -8304,6 +8457,7 @@ nuclearcraft {
     B:fluidmagnesiumnakhot=false
     B:fluidnak=false
     B:fluidnakhot=false
+    B:fluidnaoh=false
     B:fluidneptunium236=false
     B:fluidneptunium236fluoride=false
     B:fluidneptunium236fluorideflibe=false
@@ -8331,6 +8485,8 @@ nuclearcraft {
     B:fluidplutoniumfluoride=false
     B:fluidplutoniumfluorideflibe=false
     B:fluidpotassium=false
+    B:fluidpotassiumfluoridesolution=false
+    B:fluidpotassiumhydroxidesolution=false
     B:fluidquartz=false
     B:fluidquartznak=false
     B:fluidquartznakhot=false
@@ -8338,6 +8494,8 @@ nuclearcraft {
     B:fluidredstonenak=false
     B:fluidredstonenakhot=false
     B:fluidsodium=false
+    B:fluidsodiumfluoridesolution=false
+    B:fluidsodiumhydroxidesolution=false
     B:fluidsteam=false
     B:fluidsulfur=false
     B:fluidsulfurdioxide=false
@@ -8425,14 +8583,18 @@ nuclearcraft {
     B:reactorcasingtransparent=false
     B:reactordoor=false
     B:reactortrapdoor=false
+    B:rockcrusheractive=false
+    B:rockcrusheridle=false
     B:rtgamericium=false
     B:rtgcalifornium=false
     B:rtgplutonium=false
     B:rtguranium=false
+    B:saltfissionbeam=false
     B:saltfissioncontroller=false
     B:saltfissionframe=false
     B:saltfissionglass=false
     B:saltfissionheater=false
+    B:saltfissionmoderator=false
     B:saltfissionvent=false
     B:saltfissionvessel=false
     B:saltfissionwall=false
@@ -8545,6 +8707,13 @@ oreberries {
 }
 
 
+packagemod {
+    B:packager=false
+    B:researcher=false
+    B:unpackager=false
+}
+
+
 platforms {
     B:platform=false
 }
@@ -8620,6 +8789,77 @@ pneumaticcraft {
     B:uvlightbox=false
     B:vacuumpump=false
     B:vortextube=false
+}
+
+
+projectredexpansion {
+    B:machine1=false
+    B:machine1.1=false
+    B:machine2=false
+    B:machine2.1=false
+    B:machine2.10=false
+    B:machine2.11=false
+    B:machine2.12=false
+    B:machine2.2=false
+    B:machine2.3=false
+    B:machine2.4=false
+    B:machine2.5=false
+    B:machine2.6=false
+    B:machine2.7=false
+    B:machine2.8=false
+    B:machine2.9=false
+}
+
+
+projectredexploration {
+    B:barrel=false
+    B:ore=true
+    B:ore.1=true
+    B:ore.2=true
+    B:ore.3=true
+    B:ore.4=true
+    B:ore.5=true
+    B:ore.6=true
+    B:stone=true
+    B:stone.1=true
+    B:stone.10=true
+    B:stone.11=true
+    B:stone.2=true
+    B:stone.3=true
+    B:stone.4=true
+    B:stone.5=true
+    B:stone.6=true
+    B:stone.7=true
+    B:stone.8=true
+    B:stone.9=true
+    B:stonewall=false
+    B:stonewall.1=false
+    B:stonewall.10=false
+    B:stonewall.11=false
+    B:stonewall.2=false
+    B:stonewall.3=false
+    B:stonewall.4=false
+    B:stonewall.5=false
+    B:stonewall.6=false
+    B:stonewall.7=false
+    B:stonewall.8=false
+    B:stonewall.9=false
+}
+
+
+projectredfabrication {
+    B:icmachine=false
+    B:icmachine.1=false
+}
+
+
+projectredillumination {
+    B:lamp=false
+}
+
+
+projectredrelocation {
+    B:frame=false
 }
 
 
@@ -8923,6 +9163,7 @@ randomthings {
     B:advanceditemcollector=false
     B:advancedredstoneinterface=false
     B:advancedredstonerepeater=false
+    B:advancedredstonetorchon=false
     B:analogemitter=false
     B:basicredstoneinterface=false
     B:beanpod=false
@@ -9039,6 +9280,8 @@ randomthings {
     B:rainshield=false
     B:redstoneobserver=false
     B:slimecube=false
+    B:soundbox=false
+    B:sounddampener=false
     B:specialchest=false
     B:spectreblock=true
     B:spectreleaf=false
@@ -9142,6 +9385,7 @@ rftools {
     B:booster=false
     B:builder=false
     B:camoshieldblock=false
+    B:camoshieldblockopaque=false
     B:coalgenerator=false
     B:composer=false
     B:counterblock=false
@@ -9161,6 +9405,7 @@ rftools {
     B:environmentalcontroller=false
     B:invcheckerblock=false
     B:invisibleshieldblock=false
+    B:invisibleshieldblockopaque=false
     B:itemfilter=false
     B:levelemitter=false
     B:liquidmonitor=false
@@ -9175,8 +9420,11 @@ rftools {
     B:mattertransmitter=false
     B:modularstorage=false
     B:notickcamoshieldblock=false
+    B:notickcamoshieldblockopaque=false
     B:notickinvisibleshieldblock=false
+    B:notickinvisibleshieldblockopaque=false
     B:noticksolidshieldblock=false
+    B:noticksolidshieldblockopaque=false
     B:pearlinjector=false
     B:powercell=false
     B:powercelladvanced=false
@@ -9205,6 +9453,7 @@ rftools {
     B:shieldtemplateblock.3=false
     B:simpledialer=false
     B:solidshieldblock=false
+    B:solidshieldblockopaque=false
     B:spacechamber=true
     B:spacechambercontroller=false
     B:spawner=false
@@ -13007,6 +13256,16 @@ rustic {
 }
 
 
+sentek {
+    B:blockcore=true
+    B:blockgnode=true
+    B:blockmcore=true
+    B:blocknode=true
+    B:blockrcore=true
+    B:blockwnode=true
+}
+
+
 signals {
     B:blocksignal=false
     B:carthopper=false
@@ -13552,6 +13811,7 @@ thermalfoundation {
     B:orefluid.2=true
     B:orefluid.3=true
     B:orefluid.4=true
+    B:orefluid.5=true
     B:rockwool=true
     B:rockwool.1=true
     B:rockwool.10=true
@@ -13675,6 +13935,48 @@ waystones {
 
 wirelesscharger {
     B:wirelesscharger=false
+}
+
+
+xreliquary {
+    B:altar=false
+    B:apothecarycauldron=false
+    B:apothecarymortar=false
+    B:fertilelilypad=false
+    B:interdictiontorch=false
+    B:pedestal=false
+    B:pedestal.1=false
+    B:pedestal.10=false
+    B:pedestal.11=false
+    B:pedestal.12=false
+    B:pedestal.13=false
+    B:pedestal.14=false
+    B:pedestal.15=false
+    B:pedestal.2=false
+    B:pedestal.3=false
+    B:pedestal.4=false
+    B:pedestal.5=false
+    B:pedestal.6=false
+    B:pedestal.7=false
+    B:pedestal.8=false
+    B:pedestal.9=false
+    B:pedestalpassive=false
+    B:pedestalpassive.1=false
+    B:pedestalpassive.10=false
+    B:pedestalpassive.11=false
+    B:pedestalpassive.12=false
+    B:pedestalpassive.13=false
+    B:pedestalpassive.14=false
+    B:pedestalpassive.15=false
+    B:pedestalpassive.2=false
+    B:pedestalpassive.3=false
+    B:pedestalpassive.4=false
+    B:pedestalpassive.5=false
+    B:pedestalpassive.6=false
+    B:pedestalpassive.7=false
+    B:pedestalpassive.8=false
+    B:pedestalpassive.9=false
+    B:wraithnode=false
 }
 
 
