--- a/config/charcoal_pit.cfg
+++ b/config/charcoal_pit.cfg
@@ -244,6 +244,13 @@ general {
     # If log piles can be dismantled [default: true]
     B:DismantleLogPiles=true
 
+    # If getting straw from braking grass with a hoe should be enabled [default: true]
+    B:EnableStraw=true
+
+    # A list of non vanilla hoes that should be able to get straw. Format is modID:itemID [default: ]
+    S:HoeList <
+     >
+
     # Set to false to disable hard coded recipes [default: true]
     B:RegisterRecipes=true
 }
@@ -264,7 +271,7 @@ kiln {
 
     # Register custom pottery kiln recipes in the format 'modId:ingredientId' ingredientMeta 'modId:resultId' resultMeta. ex: minecraft:clay_ball 0 minecraft:brick 0 [default: []]
     S:PotteryRecipes <
-
+        
      >
 
     # Time the pottery kiln takes to finish. 1000 Ticks = 1 MC hour [range: 1000 ~ 1000000, default: 8000]
@@ -323,3 +330,5 @@ ore {
         0
      >
 }
+
+
