--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -108,6 +108,8 @@ crafting {
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:blusunrize.immersiveengineering.common.blocks.metal.BlockMetalDecoration0=true
     B:buildcraft.core.block.BlockDecoration=true
+    B:ca.zenotek.sentek.blocks.BlockCore=true
+    B:ca.zenotek.sentek.blocks.BlockNode=true
     B:charcoalPit.blocks.BlockBronzeReinforcedBrick=true
     B:charcoalPit.blocks.BlockCoke=true
     B:charcoalPit.blocks.BlockLogPile=true
@@ -145,6 +147,7 @@ crafting {
     B:com.lothrazar.cyclicmagic.component.ore.BlockDimensionOre=true
     B:com.oitsjustjose.geolosys.blocks.BlockOre=true
     B:com.oitsjustjose.geolosys.blocks.BlockOreVanilla=true
+    B:com.phylogeny.extrabitmanipulation.block.BlockBodyPartTemplate=true
     B:com.progwml6.natura.decorative.block.bookshelves.BlockNetherBookshelves=true
     B:com.progwml6.natura.decorative.block.bookshelves.BlockOverworldBookshelves=true
     B:com.progwml6.natura.decorative.block.workbenches.BlockNetherWorkbenches=true
@@ -214,6 +217,8 @@ crafting {
     B:me.modmuss50.svw.blocks.BlockPortal=true
     B:mod.flatcoloredblocks.block.BlockFlatColored=true
     B:mod.flatcoloredblocks.block.BlockFlatColoredTranslucent=true
+    B:mrtjp.projectred.exploration.BlockDecorativeStone=true
+    B:mrtjp.projectred.exploration.BlockOre=true
     B:"nc.block.BlockMeta$BlockCooler"=true
     B:"nc.block.BlockMeta$BlockFission"=true
     B:"nc.block.BlockMeta$BlockIngot"=true
@@ -303,6 +308,7 @@ crafting {
     B:net.minecraft.block.BlockGravel=true
     B:net.minecraft.block.BlockHardenedClay=true
     B:net.minecraft.block.BlockHay=true
+    B:net.minecraft.block.BlockHugeMushroom=true
     B:net.minecraft.block.BlockIce=true
     B:net.minecraft.block.BlockMelon=true
     B:net.minecraft.block.BlockNetherBrick=true
