--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -10,6 +10,19 @@ world-1082264202 {
 }
 
 
+world-1195922161 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the ingredient list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world-1381165263 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -19,14 +32,9 @@ world-1381165263 {
 
 
 world-1553709931 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -288,6 +296,19 @@ world167414058 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1821167760 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the ingredient list.
+    B:editEnabled=false
+    S:filterText=@dazz
+
+    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
