--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -153,6 +153,9 @@ modules {
     # Integrate with Survivalist [default: true]
     B:"Enable Survivalist support"=true
 
+    # Integrate with Thaumcraft [default: true]
+    B:"Enable Thaumcraft support"=true
+
     # Integrate with Thermal Foundation [default: true]
     B:"Enable Thermal Foundation integration"=true
 
@@ -196,7 +199,7 @@ tweaks {
     S:"Items that Endlectric will not drain from" <
      >
 
-    # Enter integer amounts in order of level (defaults will be extrapolated if some left blank)
+    # Enter integer amounts, specifying the amount of modifiers added to the tool for each level, in increasing order of level (defaults will be extrapolated if some left blank)
     I:"Modifier values for Botanical" <
      >
 
