--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sun Apr 22 14:42:23 CDT 2018
+#Wed Jun 06 04:58:27 CDT 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
@@ -19,4 +19,4 @@ shortcutKeyOneItem=LCONTROL, RCONTROL
 shortcutKeyToUpperSection=UP
 shortcutKeyToLowerSection=DOWN
 shortcutKeyDrop=LALT, RALT
-version=1.63+release.109.220f184
+version=1.64-dev+release.110.b4fac73
