Disabled Quark slabs, stairs and walls - Use Multiparts

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -11,14 +11,9 @@ world-1082264202 {
 
 
 world-1195922161 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the ingredient list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
@@ -306,7 +301,7 @@ world1821167760 {
 
     # Hide and unhide items by clicking them in the ingredient list.
     B:editEnabled=false
-    S:filterText=@dazz
+    S:filterText=
 
     # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
